# ZernikeMoments

./: Binomial.h  CMakeLists.txt  README.md  ZernikeDescriptor.cpp  ZernikeDescriptor.h  ZernikeMoments.cpp  ZernikeMoments.inl  main.cpp
examples/: CMakeLists.txt  main.cpp
html/: Binomial_8h-source.html  CumulativeMoments_8h-source.html  Factorial_8h-source.html  GeometricalMoments_8h-source.html  ScaledGeometricMoments_8h-source.html  ZernikeDescriptor_8h-source.html  ZernikeMoments_8h-source.html  ZernikeReconstructor_8h-source.html  annotated.html  classBinomial-members.html  classBinomial.html  classFactorial-members.html  classFactorial.html  classScaledGeometricalMoments-members.html  classScaledGeometricalMoments.html  classZernikeDescriptor-members.html  classZernikeDescriptor.html  classZernikeMoments-members.html  classZernikeMoments.html  files.html  functions.html  functions_func.html  functions_type.html  index.html  structComplexCoeff-members.html  structComplexCoeff.html
lib/: Binomial.cpp  CMakeLists.txt  Factorial.h  ScaledGeometricMoments.h  ScaledGeometricalMoments.cpp  ZernikeDescriptor.cpp  ZernikeMoments.cpp  ZernikeMoments.h  ZernikeMoments.inl
