cmake_minimum_required(VERSION 3.2)
project(ZernikeMoments)

#set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
#    Binomial.cpp
#    Binomial.h
#    Factorial.h
#    ScaledGeometricalMoments.cpp
#    ScaledGeometricMoments.h
#    ZernikeDescriptor.cpp
#    ZernikeDescriptor.h
#    ZernikeMoments.cpp
#    ZernikeMoments.h
#    ZernikeMoments.inl
    main.cpp
)

add_executable(ZernikeMoments ${SOURCE_FILES})
